src/test/ui/feature-gates/feature-gate-doc_masked.rs
#[doc(masked)] //~ ERROR: #[doc(masked)] is experimental
extern crate std as realstd;

fn main() {}
